--- a/shorturl/tinyurl/templates/short.html
+++ b/shorturl/tinyurl/templates/short.html
@@ -5,7 +5,7 @@
   <body>
   <h1>Заберите свой URL</h1>
 <p>
-    <a href="{{ url }}">(( yandex ))</a>
+    <a href="{{ url }}">{{ url }}</a>
 </p>
 
   </body>
